--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
 
-<head>
+<html lang="en">
 
-	
+	<head>
+		<title>HydraClaw.com</title>
 
-	<title>HydraClaw.com</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
 
-	<meta charset="UTF-8">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	
+		<link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.min.css" />
+		<link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.components.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+		
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+				crossorigin="anonymous">
+		</script>
 
-</head>
-
-    <body>
-
-    </body>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+		
+	</head>
+	<body>
+		<div class="ms-Grid">
+			<div class="ms-Grid-row">
+				<div class="ms-Grid-col ms-font-s ms-u-sm1">
+					<img src="images/hydraclaw_logo.gif">
+				</div>
+			</div>
+			<div class="ms-Grid-row">
+				<div class="ms-Grid-col ms-font-s ms-u-sm1"></div>
+				<div class="ms-Grid-col ms-font-s ms-u-sm11"></div>
+			</div>                
+		</div>
+	</body>
 </html>
