--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 			</div>
 			<div class="ms-Grid-row">
 				<div class="ms-Grid-col ms-font-s ms-u-sm1"></div>
-				<div class="ms-Grid-col ms-font-s ms-u-sm11"></div>
+				<div class="ms-Grid-col ms-font-s ms-u-sm11">
+					<img src="images/night_cyclist_web_banner.jpg">
+				</div>
 			</div>                
 		</div>
 	</body>
