--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="ms-Grid-row">
 				<div class="ms-Grid-col ms-font-s ms-u-sm1"></div>
 				<div class="ms-Grid-col ms-font-s ms-u-sm11">
-					<img src="images/night_cyclist_web_banner.jpg">
+					<img src="images/night_cyclist_web_banner.jpg" height="500" width="750  ">
 				</div>
 			</div>                
 		</div>
